[HABRI][#358] Fixed overlapping css issue.

--- a/components/com_citations/assets/css/citations.css
+++ b/components/com_citations/assets/css/citations.css
@@ -255,6 +255,7 @@
 		color: #e1f0de;
 		margin-top: 0;
 		margin-bottom: 0;
+		padding-left: 60px;
 	}
 
 /* Upload List */
